[gd_scene load_steps=8 format=2]

[ext_resource path="res://Cutscene/textbox.png" type="Texture" id=1]
[ext_resource path="res://Cutscene/TextFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Cutscene/NotoSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Cutscene/CutsceneHistory.tscn" type="PackedScene" id=4]
[ext_resource path="res://MM2Font_Smaller.tres" type="DynamicFont" id=5]
[ext_resource path="res://Cutscene/CutsceneMain.tres.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 3 )

[node name="CutscenePlayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 8 )

[node name="dim" type="Polygon2D" parent="."]
modulate = Color( 1, 1, 1, 0.6 )
z_index = -3
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 1280, 0, 1280, 720, 0, 720 )

[node name="Backgrounds" type="Node2D" parent="."]
z_index = -3

[node name="Portraits" type="Node2D" parent="."]
position = Vector2( 0, 100 )

[node name="Music" type="Node" parent="."]

[node name="textbox" type="Sprite" parent="."]
position = Vector2( 640, 550 )
texture = ExtResource( 1 )

[node name="textActor" type="Label" parent="."]
visible = false
margin_left = 240.0
margin_top = 510.0
margin_right = 1040.0
margin_bottom = 710.0
custom_fonts/font = ExtResource( 2 )
text = "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textActor_better" type="RichTextLabel" parent="."]
margin_left = 240.0
margin_top = 510.0
margin_right = 1040.0
margin_bottom = 710.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "\"[color=#ff00ff]Lorem ipsum[/color] dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor  (If you can see this, the cutscene failed to load. File a bug report!)"
text = "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor  (If you can see this, the cutscene failed to load. File a bug report!)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakerActor" type="Label" parent="."]
margin_left = 240.0
margin_top = 460.0
margin_right = 1020.0
margin_bottom = 510.0
custom_fonts/font = SubResource( 1 )
text = "Dandelion"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressStartToSkip" type="Label" parent="."]
margin_left = 32.0
margin_top = 682.0
margin_right = 371.0
margin_bottom = 702.0
custom_fonts/font = ExtResource( 5 )
text = "PRESS START TO SKIP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="."]

[node name="CutsceneHistory" parent="." instance=ExtResource( 4 )]
position = Vector2( -1280, 0 )

[node name="TextboxTween" type="Tween" parent="."]
pause_mode = 2
playback_process_mode = 0

[node name="HistoryTween" type="Tween" parent="."]
